XMLExper/m12/m12_108_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘int tinyxml2::XMLNode::ChildElementCount() const’:
tinyxml2.cpp:853:44: error: cannot dynamic_cast ‘e’ (of type ‘const class tinyxml2::XMLElement*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
  853 |   /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(e) = e->NextSiblingElement();
      |                                            ^
diff: tinyxml2.o: No such file or directory
